compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__special_error_for_pythonic_neste_import.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1906
expression: import one.two.three
snapshot_kind: text
---
----- SOURCE CODE
import one.two.three

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:11
  │
1 │ import one.two.three
  │           ^ I was expecting either `/` or `.{` here.

Perhaps you meant one of:

    import one/two
    import one.{item}
